--- a/ExamGenerator/templates/game/identification.html
+++ b/ExamGenerator/templates/game/identification.html
@@ -9,26 +9,22 @@
 {% block game_header %} {{ game_mode }} {% endblock %}
 
 {% block game_content %}
-<div id="question-container">
-    <h1 id="question-title">Identification</h1>
-
-    {% if generated_questions %}
-        {% for question_set in generated_questions %}
-            <div class="question-set">                
-                {% for question_data in question_set.questions %}
-                    <div class="question-card">
-                        <p class="question-text">{{ question_data.text }}</p>
-                        <p>Answer:</p>
-                        <input type="text" class="user-answer" placeholder="Enter your answer here"/>
-                        <span class="correct-answer" style="display: none;">{{ question_data.answer }}</span>
-                    </div>
-                {% endfor %}
-            </div>
-        {% endfor %}
-    {% else %}
-        <p id="no-questions-message">No questions generated.</p>
-    {% endif %}
-</div>
+    <div id="question-container">
+        <h1 id="question-title">Identification</h1>
+    
+        {% if generated_questions %}
+            {% for question_data in generated_questions %}
+                <div class="question-card">
+                    <p class="question-text">{{ question_data.text }}</p>
+                    <p>Answer:</p>
+                    <input type="text" class="user-answer" placeholder="Enter your answer here" />
+                    <span class="correct-answer" style="display: none;">{{ question_data.answer }}</span>
+                </div>
+            {% endfor %}
+        {% else %}
+            <p id="no-questions-message">No questions generated.</p>
+        {% endif %}
+    </div>
 {% endblock %}
 
 {% block js_file %}
