--- a/ExamGenerator/templates/game/multiple-choice.html
+++ b/ExamGenerator/templates/game/multiple-choice.html
@@ -6,33 +6,33 @@
 
 {% block game_title %} View Progress {{ game_mode }} {% endblock %}
 
-{% block game_header %} {{ game_mode }} {% endblock %}
+{% block game_header %} Multiple Choice {{ game_mode }} {% endblock %}
 
 {% block game_content %}
     <div id="question-container">
-        <h1 id="question-title">Multiple Choice</h1>
-
         {% if generated_questions %}
             {% for question_data in generated_questions %}
                 <div class="question-card" style="display: none;">
                     <p class="question-text">{{ question_data.text }}</p>
-                    <p>Answer:</p>
+                    <p>Select up to one option</p>
                     <div class="answer-options">
                         {% for option in question_data.options %}
-                            <label>
-                                <input type="radio" name="question_{{ loop.index }}" value="{{ option }}" class="user-answer"> {{ option }}
-                            </label><br>
+                            <input type="radio" id="option_{{ loop.index }}" name="question_{{ loop.index }}" value="{{ option }}" class="user-answer">
+                            <label for="option_{{ loop.index }}">{{ option }}</label>
                         {% endfor %}
-                    </div>
+                    </div>                    
                     <span class="correct-answer" style="display: none;">{{ question_data.answer }}</span>
                 </div>
             {% endfor %}
         {% else %}
             <p id="no-questions-message">No questions generated.</p>
         {% endif %}
+    </div>
+    <div id="button-container">
         <button id="next-button" style="display: none;">Next Question</button>
         <button id="submit-button">Submit</button>
-        <button id="cancel-button">Cancel</button>        
+        <button id="cancel-button">Cancel</button>
+    </div>
 {% endblock %}
 
 {% block js_file %}
