fix the js and some css

--- a/ExamGenerator/static/css/style.css
+++ b/ExamGenerator/static/css/style.css
@@ -3,6 +3,7 @@
     --secondary-color: #ECD7EC;
     --tertiary-color: #D1E5F9;
     --accent-color: #1E4050;
+    --fourth-color: #BAE6E2;
 
     --background-color: #EFF2FE;
     --black-color: #0D1717;
