--- a/ExamGenerator/static/css/multiple-choice.css
+++ b/ExamGenerator/static/css/multiple-choice.css
@@ -1,5 +1,4 @@
 body {
-    background-color: var(--secondary-color);
     background-image: radial-gradient(circle, white 10%, var(--secondary-color), var(--secondary-color));  
     display: absolute;
     justify-content: center;
@@ -97,25 +96,31 @@ p {
 
 #button-container {
     text-align: center;
+    display: flex;
+    justify-content: flex-end; 
+    gap: 10px; 
 }
 
 button {
-    margin: 5px;
+    margin: 0; 
     font-size: 1.5em;
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
-    width: 40%;
     background-color: white;
     color: var(--black-color);
     border: 2px solid #5B699C;
+    width: 25%;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
 }
 
 #submit-button {
+    position: relative; 
     color: white;
     background: #5B699C;
     border: 2px solid white;
+    box-shadow: 0px 4px 4px rgba(255, 255, 255, 0.25);
 }
 
 #submit-button:hover,
@@ -124,6 +129,15 @@ button {
     color: white;
     background-color: #5B699C;
 }
+.correct-answer {
+    color: var(--black-color);
+    text-align: left;
+    font-size: 1.5rem;
+    margin-top: 15px;
+    margin-bottom: 25px;
+}
+
+
 
 input[type="radio"] {
     appearance: none; 
