--- a/ExamGenerator/templates/game/trueorfalse.html
+++ b/ExamGenerator/templates/game/trueorfalse.html
@@ -6,34 +6,37 @@
 
 {% block game_title %} View Progress {{ game_mode }} {% endblock %}
 
-{% block game_header %} {{ game_mode }} {% endblock %}
+{% block game_header %} True or False {{ game_mode }} {% endblock %}
 
 {% block game_content %}
     <div id="question-container">
-        <h1 id="question-title">True or False</h1>
-    
         {% if generated_questions %}
             {% for question_data in generated_questions %}
                 {% if question_data.type == 'TOF' %}
-                    <div class="question-card">
-                        <p class="question-text">{{ question_data.text.split('a)')[0] }}</p>
-                        <p>Answer:</p>
-                        <label>
-                            <input type="radio" name="question_{{ loop.index }}" value="True" class="user-answer"> True
-                        </label>
-                        <label>
-                            <input type="radio" name="question_{{ loop.index }}" value="False" class="user-answer"> False
-                        </label>
-                        <span class="correct-answer" style="display: none;">The correct answer is {{ question_data.answer }}</span>
+                <div class="question-card" style="display: none;">
+                     <p class="question-text">{{ question_data.text.split(' a)')[0] }}</p>
+                     <p>Select up to one option</p>
+                     <div class="answer-options">
+                            <label for="true_{{ loop.index }}">
+                                <input type="radio" id="true_{{ loop.index }}" name="question_{{ loop.index }}" value="True" class="user-answer"> True
+                            </label>
+                            <label for="false_{{ loop.index }}">
+                                <input type="radio" id="false_{{ loop.index }}" name="question_{{ loop.index }}" value="False" class="user-answer"> False
+                            </label>
+                        </div>
+                        <span class="correct-answer" style="display: none;">The correct answer is: {{ question_data.answer }}</span>
                     </div>
                 {% endif %}
             {% endfor %}
         {% else %}
             <p id="no-questions-message">No questions generated.</p>
         {% endif %}
+    </div>
+    <div id="button-container">
         <button id="next-button" style="display: none;">Next Question</button>
-        <button id="submit-button">Submit</button>
-        <button id="cancel-button">Cancel</button>        
+        <button id="submit-button" disabled>Submit</button>
+        <button id="cancel-button">Cancel</button>
+    </div>
 {% endblock %}
 
 {% block js_file %}
